# sito

./: .gitignore  CNAME  index.html  setup.sh
platform/: .env.example  pyproject.toml
platform/src/daccia/: __init__.py  cli.py  config.py
platform/src/daccia/content/: article.py  base.py  refiner.py  streams.py
platform/src/daccia/llm/: client.py  conversation.py  prompts.py
platform/src/daccia/publishing/: medium.py
platform/src/daccia/research/: analyzer.py  fetcher.py  proposer.py
platform/src/daccia/storage/: database.py  models.py
platform/src/daccia/style/: analyzer.py  applier.py  profile.py
platform/src/daccia/templates/: article_blog.j2  article_medium.j2  blog_section.html.j2  refinement.j2  research_analyze.j2  research_propose.j2  stream_doctor.j2  stream_nurse.j2  stream_patient.j2  style_analysis.j2  teaser_prompt.j2
platform/tests/: conftest.py  test_content.py  test_llm.py  test_publish.py  test_research.py  test_style.py
